SERVER-8331 Report time in nanoseconds or call counts